sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 160 255 dummy
simstep 49 1
